--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 ruleta_backend/node_modules
 ruleta_backend/dist
 ruleta_backend/.env
+
+ruleta_frontend/node_modules
+ruleta_frontend/dist
+ruleta_frontend/.env
