--- a/ruleta_frontend/package.json
+++ b/ruleta_frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
@@ -43,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-toastify": "^8.1.0"
   }
 }
